...
    @Binding var selectedTab: TabItem
    
    var body: some View {
        HStack(spacing: 24) {
            tabButton(
                tab: .home,
                title: "Home",
                systemImage: "house"
            )
            
            tabButton(
                tab: .discover,
                title: "Discover",
...
